# ynabtc

./: .gitignore  RAILWAY_DEPLOYMENT.md  main.py  pyproject.toml  railway.toml  requirements.txt
templates/: config.html  emails.html  logs.html
