[project]
name = "ynabtc"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.6.3",
    "beautifulsoup4>=4.13.5",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "fuzzywuzzy>=0.18.0",
    "google-api-python-client==2.86.0",
    "google-auth==2.17.3",
    "google-auth-httplib2==0.1.0",
    "google-auth-oauthlib==1.0.0",
    "gunicorn==20.0.4",
    "python-dotenv>=1.1.1",
    "python-levenshtein>=0.27.1",
    "ynab>=1.8.0",
]
